style.css
:root {
  /* colors */
  --text: #dcdcdc;
  --button: #2f2f2f;
  --highlight: #9c3838;
  --background: black;
}

html {
  box-sizing: border-box;
  font-family: "Source Code Pro", monospace;
  font-size: 100%;
}
*,
*:before,
*:after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
  border: 0;
}
body {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  background: var(--highlight);
  padding: 1%;
}

.calcwrapper {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  background: var(--background);
  color: var(--text);
  padding: 1%;
  border-radius: 0.4em;
  font-size: 6vh;
}

/* @media all and (orientation: portrait) { */
/*   .clacwrapper { */
/*   } */
/* } */

@media all and (orientation: landscape) {
  .calcwrapper {
    width: 70vh;
  }
}

.calcdisplay {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex: 1;
  padding: 2%;
  font-size: 10vh;
  overflow: hidden;
}

.calcbody {
  display: flex;
  flex-direction: column;
  flex: 3;
  padding-top: 3%;
  border-top: 0.5vh solid var(--highlight);
}

.buttonrow {
  display: flex;
  flex: 1;
}

.button {
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 1;
  background: var(--button);
  margin: 0.1em;
  border-radius: 1em;
  user-select: none;
  transition: ease;
  transition-property: filter, transform;
  transition-duration: 0.05s, 0.1s;
}

.buttonrow:first-child,
.button:last-child {
  color: var(--highlight);
}

.buttonrow:first-child .button:first-child,
.buttonrow:last-child .button:last-child {
  background: var(--highlight);
  color: var(--background);
}

.buttonrow:last-child .button:last-child {
  flex: 2;
}

.buttonrow:first-child .button:nth-child(2) {
  line-height: 0;
}

.button:hover {
  filter: invert(1);
}

.clicked {
  transform: scale(0.8);
}

